js tabs second screen

--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="#" class="social__link">
+                        <a href="tg://msg?text=@denisdeveloper" class="social__link">
                             <svg class="icon">
                                 <use xlink:href="#icon-telegram"/>
                             </svg>
@@ -95,7 +95,7 @@
                             </svg>
                         </a>
                     <li class="social__item">
-                        <a href="#" class="social__link">
+                        <a href="skype:belocerkovecden" class="social__link">
                             <svg class="icon">
                                 <use xlink:href="#icon-skype"/>
                             </svg>
@@ -113,35 +113,71 @@
                 <div class="wrap_navTab">
                     <ul class="tabs__nav">
                         <li class="tabs__item">
-                            <button class="tabs__btn">TAB1</button>
+                            <button class="tabs__btn active-tabs-btn" data-tab="0">TAB 1</button>
                         </li>
                         <li class="tabs__item">
-                            <button class="tabs__btn">TAB2</button>
+                            <button class="tabs__btn" data-tab="1">TAB 2</button>
                         </li>
                         <li class="tabs__item">
-                            <button class="tabs__btn">TAB3</button>
+                            <button class="tabs__btn" data-tab="2">TAB 3</button>
                         </li>
                     </ul>
                 </div>
 
 
                 <ul class="tabs__content-list aic">
-                    <li class="tabs__content-item">
+                    <li class="tabs__content-item active-tabs-item">
                         <div class="tabs__contentText">
-                            <h2 class="tabs__contentHeader">Tabs with soft transitioning effect.</h2>
+                            <h2 class="tabs__contentHeader">1Tabs with soft transitioning effect.</h2>
                             <div class="tabs__contentWrapP">
-                                <p class="tabs__contentP">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                                <p class="tabs__contentP">1Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                                     bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
                                     justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
                                     penatibus et magnis dis parturient montes.</p>
 
-                                <p class="tabs__contentP">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                                <p class="tabs__contentP">1Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                                     bibendum laoreet.</p>
                             </div>
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
                         </div>
                         <div class="tabs__contentImg">
                             <img src="img/dest/city-mirror.webp" alt="city-mirror">
+                        </div>
+                    </li>
+                    <li class="tabs__content-item">
+                        <div class="tabs__contentText">
+                            <h2 class="tabs__contentHeader">2Tabs with soft transitioning effect.</h2>
+                            <div class="tabs__contentWrapP">
+                                <p class="tabs__contentP">2Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                                    bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                                    justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                                    penatibus et magnis dis parturient montes.</p>
+
+                                <p class="tabs__contentP">2Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                                    bibendum laoreet.</p>
+                            </div>
+                            <a href="#" class="tabs__contentBtn" download>Скачать</a>
+                        </div>
+                        <div class="tabs__contentImg">
+                            <img src="img/dest/pipe1.webp" alt="city-mirror">
+                        </div>
+                    </li>
+                    <li class="tabs__content-item">
+                        <div class="tabs__contentText">
+                            <h2 class="tabs__contentHeader">3Tabs with soft transitioning effect.</h2>
+                            <div class="tabs__contentWrapP">
+                                <p class="tabs__contentP">3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                                    bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                                    justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                                    penatibus et magnis dis parturient montes.</p>
+
+                                <p class="tabs__contentP">3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                                    bibendum laoreet.</p>
+                            </div>
+                            <a href="#" class="tabs__contentBtn" download>Скачать</a>
+                        </div>
+                        <div class="tabs__contentImg">
+                            <img src="img/dest/pipe2.webp" alt="city-mirror">
                         </div>
                     </li>
                 </ul>
