--- a/app/index.html
+++ b/app/index.html
@@ -130,12 +130,14 @@
                         <div class="tabs__contentText">
                             <h2 class="tabs__contentHeader">1Tabs with soft transitioning effect.</h2>
                             <div class="tabs__contentWrapP">
-                                <p class="tabs__contentP">1Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                                <p class="tabs__contentP">1Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Aenean euismod
                                     bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
                                     justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
                                     penatibus et magnis dis parturient montes.</p>
 
-                                <p class="tabs__contentP">1Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                                <p class="tabs__contentP">1Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Aenean euismod
                                     bibendum laoreet.</p>
                             </div>
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
@@ -148,12 +150,14 @@
                         <div class="tabs__contentText">
                             <h2 class="tabs__contentHeader">2Tabs with soft transitioning effect.</h2>
                             <div class="tabs__contentWrapP">
-                                <p class="tabs__contentP">2Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                                <p class="tabs__contentP">2Lorem ipsum dolor 345345345345 amet, consectetur adipiscing
+                                    elit. Aenean euismod
                                     bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
-                                    justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                                    justo commodo. 435345 sociis natoque
                                     penatibus et magnis dis parturient montes.</p>
 
-                                <p class="tabs__contentP">2Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                                <p class="tabs__contentP">2Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Aenean euismod
                                     bibendum laoreet.</p>
                             </div>
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
@@ -166,12 +170,13 @@
                         <div class="tabs__contentText">
                             <h2 class="tabs__contentHeader">3Tabs with soft transitioning effect.</h2>
                             <div class="tabs__contentWrapP">
-                                <p class="tabs__contentP">3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
-                                    bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
-                                    justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                                <p class="tabs__contentP">3Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Aenean euismod
+                                    bibendum laoreet.sdfgdfg sdfg lvinar tempor. Cum sociis natoque
                                     penatibus et magnis dis parturient montes.</p>
 
-                                <p class="tabs__contentP">3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                                <p class="tabs__contentP">3Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Aenean euismod
                                     bibendum laoreet.</p>
                             </div>
                             <a href="#" class="tabs__contentBtn" download>Скачать</a>
