--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <header class="header">
+    <!-- Logo Menu -->
     <div class="first-line">
         <div class="container">
             <div class="flex-block">
@@ -24,7 +25,7 @@
             </div>
         </div>
     </div>
-
+    <!-- Text Form -->
     <div class="header__content">
         <div class="container h100">
             <div class="header-content-df h100 aic">
@@ -58,7 +59,7 @@
             </div>
         </div>
     </div>
-
+    <!-- Social -->
     <div class="header__social">
         <div class="container">
             <div class="social">
@@ -107,6 +108,7 @@
 </header>
 
 <main class="main">
+    <!-- START Tabs -->
     <div class="tabs">
         <div class="container">
             <div class="flex-block aic">
@@ -123,8 +125,6 @@
                         </li>
                     </ul>
                 </div>
-
-
                 <ul class="tabs__content-list aic">
                     <li class="tabs__content-item active-tabs-item">
                         <div class="tabs__contentText">
@@ -189,6 +189,128 @@
             </div>
         </div>
     </div>
+    <!-- Graphic information-->
+    <div class="info">
+        <div class="container">
+            <div class="flex-block aic info__wrap">
+                <div class="info__img">
+                    <img src="img/dest/pipe5.webp" alt="#">
+                </div>
+                <div class="info__text">
+                    <h2 class="info__header">Sub list section</h2>
+                    <p class="info__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                        accumsan et viverra justo commodo.</p>
+                    <ul class="info__list">
+                        <li class="info__list-item">
+                            <div class="info__wrapIcon">
+                                <svg class="icon icon-cloud-download">
+                                    <use xlink:href="#icon-cloud-download"></use>
+                                </svg>
+                            </div>
+                            <div class="info__listTextRight">
+                                <h3 class="info__list-h3">Скачать</h3>
+                                <p class="info__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Aenean euismod bibendum laoreet.</p>
+                            </div>
+                        </li>
+                        <li class="info__list-item">
+                            <div class="info__wrapIcon">
+                                <svg class="icon icon-cloud-upload">
+                                    <use xlink:href="#icon-cloud-upload"></use>
+                                </svg>
+                            </div>
+                            <div class="info__listTextRight">
+                                <h3 class="info__list-h3">Выгрузить</h3>
+                                <p class="info__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Aenean euismod bibendum laoreet. Proin gravida dolor
+                                    sit amet lacus accumsan et viverra justo commodo.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="info">
+        <div class="container">
+            <div class="flex-block aic info__wrap">
+                <div class="info__img">
+                    <img src="img/dest/pipe6.webp" alt="#">
+                </div>
+                <div class="info__text">
+                    <h2 class="info__header">Standard Picture Section</h2>
+                    <p class="info__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
+                        et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis
+                        natoque penatibus et magnis dis parturient montes.</p>
+                    <p class="info__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="info">
+        <div class="container">
+            <div class="flex-block aic info__wrap">
+                <div class="info__img">
+                    <img src="img/dest/pipe5.webp" alt="#">
+                </div>
+                <div class="info__text">
+                    <h2 class="info__header">Sub list section</h2>
+                    <p class="info__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+                        accumsan et viverra justo commodo.</p>
+                    <ul class="info__list">
+                        <li class="info__list-item">
+                            <div class="info__wrapIcon">
+                                <svg class="icon icon-cloud-download">
+                                    <use xlink:href="#icon-cloud-download"></use>
+                                </svg>
+                            </div>
+                            <div class="info__listTextRight">
+                                <h3 class="info__list-h3">Скачать</h3>
+                                <p class="info__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Aenean euismod bibendum laoreet.</p>
+                            </div>
+                        </li>
+                        <li class="info__list-item">
+                            <div class="info__wrapIcon">
+                                <svg class="icon icon-cloud-upload">
+                                    <use xlink:href="#icon-cloud-upload"></use>
+                                </svg>
+                            </div>
+                            <div class="info__listTextRight">
+                                <h3 class="info__list-h3">Выгрузить</h3>
+                                <p class="info__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Aenean euismod bibendum laoreet. Proin gravida dolor
+                                    sit amet lacus accumsan et viverra justo commodo.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="info">
+        <div class="container">
+            <div class="flex-block aic info__wrap">
+                <div class="info__img">
+                    <img src="img/dest/pipe6.webp" alt="#">
+                </div>
+                <div class="info__text">
+                    <h2 class="info__header">Standard Picture Section</h2>
+                    <p class="info__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                        euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
+                        et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis
+                        natoque penatibus et magnis dis parturient montes.</p>
+                    <p class="info__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </main>
 
 <footer class="footer">
@@ -223,6 +345,12 @@
         </symbol>
         <symbol id="icon-cloud-download" viewBox="0 0 32 32">
             <path d="M27.844 11.252c-0.101-4.022-3.389-7.252-7.433-7.252-2.369 0-4.477 1.109-5.839 2.835-0.764-0.987-1.959-1.624-3.303-1.624-2.307 0-4.176 1.871-4.176 4.179 0 0.201 0.015 0.399 0.043 0.592-0.351-0.063-0.711-0.098-1.080-0.098-3.344-0-6.054 2.712-6.054 6.058s2.71 6.058 6.054 6.058h2.868l7.078 7.328 7.078-7.328 3.484-0c3.004-0.006 5.438-2.444 5.438-5.451 0-2.565-1.771-4.716-4.156-5.296zM16 26l-6-6h4v-6h4v6h4l-6 6z"></path>
+        </symbol>
+        <symbol id="icon-cloud-download" viewBox="0 0 32 32">
+            <path d="M27.844 11.252c-0.101-4.022-3.389-7.252-7.433-7.252-2.369 0-4.477 1.109-5.839 2.835-0.764-0.987-1.959-1.624-3.303-1.624-2.307 0-4.176 1.871-4.176 4.179 0 0.201 0.015 0.399 0.043 0.592-0.351-0.063-0.711-0.098-1.080-0.098-3.344-0-6.054 2.712-6.054 6.058s2.71 6.058 6.054 6.058h2.868l7.078 7.328 7.078-7.328 3.484-0c3.004-0.006 5.438-2.444 5.438-5.451 0-2.565-1.771-4.716-4.156-5.296zM16 26l-6-6h4v-6h4v6h4l-6 6z"></path>
+        </symbol>
+        <symbol id="icon-cloud-upload" viewBox="0 0 32 32">
+            <path d="M27.883 12.078c0.076-0.347 0.117-0.708 0.117-1.078 0-2.761-2.239-5-5-5-0.444 0-0.875 0.058-1.285 0.167-0.775-2.417-3.040-4.167-5.715-4.167-2.73 0-5.033 1.823-5.76 4.318-0.711-0.207-1.462-0.318-2.24-0.318-4.418 0-8 3.582-8 8s3.582 8 8 8h4v6h8v-6h7c2.761 0 5-2.239 5-5 0-2.46-1.777-4.505-4.117-4.922zM18 20v6h-4v-6h-5l7-7 7 7h-5z"></path>
         </symbol>
     </defs>
 </svg>
