--- a/app/index.html
+++ b/app/index.html
@@ -108,7 +108,7 @@
 </header>
 
 <main class="main">
-    <!-- START Tabs -->
+    <!-- Tabs -->
     <div class="tabs">
         <div class="container">
             <div class="flex-block aic">
@@ -310,7 +310,253 @@
             </div>
         </div>
     </div>
+    <!-- Why this is awesome -->
+    <div class="whyThis">
+        <div class="container">
+            <div class="flex-block aic">
+                <div class="whyThis__header">
+                    <h2>WHY THIS IS AWESOME</h2>
+                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                </div>
+                <ul class="whyThis__list">
+                    <li>
+                        <div class="wrapIcon">
+                            <svg class="icon icon-location2">
+                                <use xlink:href="#icon-location2"></use>
+                            </svg>
+                        </div>
+                        <h3>Thoughtful Design</h3>
+                        <p class="whyThis__p">Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Aenean euismod bibendum laoreet. Proin gravida
+                            dolor sit amet lacus accumsan et viverra.</p>
+                    </li>
+                    <li>
+                        <div class="wrapIcon">
+                            <svg class="icon icon-keyboard">
+                                <use xlink:href="#icon-keyboard"></use>
+                            </svg>
+                        </div>
+                        <h3>Well Crafted</h3>
+                        <p class="whyThis__p">Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Aenean euismod bibendum laoreet. Proin gravida
+                            dolor sit amet lacus accumsan et viverra.</p>
+                    </li>
+                    <li>
+                        <div class="wrapIcon">
+                            <svg class="icon icon-power">
+                                <use xlink:href="#icon-power"></use>
+                            </svg>
+                        </div>
+                        <h3>Easy to Customize</h3>
+                        <p class="whyThis__p">Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Aenean euismod bibendum laoreet. Proin gravida
+                            dolor sit amet lacus accumsan et viverra.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- Price -->
+    <div class="price">
+        <div class="container">
+            <div class="flex-block aic price__wrap">
+                <div class="price__header">
+                    <h2 class="price__headerH2">PRICING OPTIONS</h2>
+                    <h3 class="price__headerH3">Lorem ipsum dolor sit amet, consectetur adipiscing elite.</h3>
+                </div>
+                <ul class="price__list">
+                    <li class="price__item">
+                        <h3 class="price__itemH3">Basic</h3>
+                        <div class="price__price">
+                            <span class="price__currency">$</span><span class="price__number">10</span>
+                        </div>
+                        <h4 class="price__itemH4">Free for Life</h4>
+                        <div class="price__mainColor"></div>
+                        <ul class="price__list-options">
+                            <li>1 gb of space</li>
+                            <li>10 gb of bandwidth</li>
+                            <li>3 websites</li>
+                            <li>Basic Customization</li>
+                            <li>wordpress integration</li>
+                            <li>email support</li>
+                        </ul>
+                    </li>
+                    <li class="price__item">
+                        <h3 class="price__itemH3">Professional</h3>
+                        <div class="price__price">
+                            <span class="price__currency">$</span><span class="price__number">19</span>
+                        </div>
+                        <h4 class="price__itemH4">Monthly Payment</h4>
+                        <div class="price__mainColor"><span class="price__mainColorText">OUR MOST POPULAR</span></div>
+                        <ul class="price__list-options">
+                            <li>5 gb of space</li>
+                            <li>50 gb of bandwidth</li>
+                            <li>12 websites</li>
+                            <li>Advanced Customization</li>
+                            <li>wordpress integration</li>
+                            <li>email support</li>
+                        </ul>
+                    </li>
+                    <li class="price__item">
+                        <h3 class="price__itemH3">Enterprise</h3>
+                        <div class="price__price">
+                            <span class="price__currency">$</span><span class="price__number">70</span>
+                        </div>
+                        <h4 class="price__itemH4">Monthly Payment</h4>
+                        <div class="price__mainColor"></div>
+                        <ul class="price__list-options">
+                            <li>Unlimited space</li>
+                            <li>Unlimited bandwidth</li>
+                            <li>100 websites</li>
+                            <li>Unlimited Customization</li>
+                            <li>wordpress integration</li>
+                            <li>24/7 customer support</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- Say -->
+    <div class="say">
+        <div class="container">
+            <div class="flex-block aic say__wrap">
+                <div class="say__header">
+                    <h2 class="say__headerH2">WHAT OUR CUSTOMERS ARE SAYING</h2>
+                    <h3 class="say__headerH3">Lorem ipsum dolor sit amet, consectetur adipiscing elite.</h3>
+                </div>
 
+                <ul class="say__list tns-sl">
+                    <li class="say__item">
+                        <p class="say__p">1Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.</p>
+                        <div class="say__user-container">
+                            <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
+                            <div class="say__user-container-data">
+                                <div class="say__name-user">Jeremy H.</div>
+                                <div class="say__profession">Manager</div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="say__item">
+                        <p class="say__p">2Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.</p>
+                        <div class="say__user-container">
+                            <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
+                            <div class="say__user-container-data">
+                                <div class="say__name-user">John S.</div>
+                                <div class="say__profession">Freelancer</div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="say__item">
+                        <p class="say__p">3Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.</p>
+                        <div class="say__user-container">
+                            <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
+                            <div class="say__user-container-data">
+                                <div class="say__name-user">Susan W.</div>
+                                <div class="say__profession">Photographer</div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="say__item">
+                        <p class="say__p">4Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.</p>
+                        <div class="say__user-container">
+                            <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
+                            <div class="say__user-container-data">
+                                <div class="say__name-user">Jeremy H.</div>
+                                <div class="say__profession">Manager</div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="say__item">
+                        <p class="say__p">5Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.</p>
+                        <div class="say__user-container">
+                            <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
+                            <div class="say__user-container-data">
+                                <div class="say__name-user">John S.</div>
+                                <div class="say__profession">Freelancer</div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="say__item">
+                        <p class="say__p">6Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.</p>
+                        <div class="say__user-container">
+                            <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
+                            <div class="say__user-container-data">
+                                <div class="say__name-user">Susan W.</div>
+                                <div class="say__profession">Photographer</div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="say__item">
+                        <p class="say__p">7Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.</p>
+                        <div class="say__user-container">
+                            <div class="wrap__img-user"><img src="img/dest/avatar1.webp" alt="avatar1"></div>
+                            <div class="say__user-container-data">
+                                <div class="say__name-user">Jeremy H.</div>
+                                <div class="say__profession">Manager</div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="say__item">
+                        <p class="say__p">8Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.</p>
+                        <div class="say__user-container">
+                            <div class="wrap__img-user"><img src="img/dest/avatar2.webp" alt="avatar2"></div>
+                            <div class="say__user-container-data">
+                                <div class="say__name-user">John S.</div>
+                                <div class="say__profession">Freelancer</div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="say__item">
+                        <p class="say__p">9Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Doloribus
+                            accusamus expedita repellat similique
+                            odio aspernatur ex, architecto eaque
+                            quo suscipit.</p>
+                        <div class="say__user-container">
+                            <div class="wrap__img-user"><img src="img/dest/avatar3.webp" alt="avatar3"></div>
+                            <div class="say__user-container-data">
+                                <div class="say__name-user">Susan W.</div>
+                                <div class="say__profession">Photographer</div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </main>
 
 <footer class="footer">
@@ -321,6 +567,15 @@
 <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
+        <symbol id="icon-power" viewBox="0 0 32 32">
+            <path d="M12 0l-12 16h12l-8 16 28-20h-16l12-12z"></path>
+        </symbol>
+        <symbol id="icon-keyboard" viewBox="0 0 36 32">
+            <path d="M34 4h-32c-1.1 0-2 0.9-2 2v20c0 1.1 0.9 2 2 2h32c1.1 0 2-0.9 2-2v-20c0-1.1-0.9-2-2-2zM20 8h4v4h-4v-4zM26 14v4h-4v-4h4zM14 8h4v4h-4v-4zM20 14v4h-4v-4h4zM8 8h4v4h-4v-4zM14 14v4h-4v-4h4zM4 8h2v4h-2v-4zM4 14h4v4h-4v-4zM6 24h-2v-4h2v4zM24 24h-16v-4h16v4zM32 24h-6v-4h6v4zM32 18h-4v-4h4v4zM32 12h-6v-4h6v4z"></path>
+        </symbol>
+        <symbol id="icon-location2" viewBox="0 0 32 32">
+            <path d="M16 0c-5.523 0-10 4.477-10 10 0 10 10 22 10 22s10-12 10-22c0-5.523-4.477-10-10-10zM16 16.125c-3.383 0-6.125-2.742-6.125-6.125s2.742-6.125 6.125-6.125 6.125 2.742 6.125 6.125-2.742 6.125-6.125 6.125zM12.125 10c0-2.14 1.735-3.875 3.875-3.875s3.875 1.735 3.875 3.875c0 2.14-1.735 3.875-3.875 3.875s-3.875-1.735-3.875-3.875z"></path>
+        </symbol>
         <symbol id="icon-skype" viewBox="0 0 32 32">
             <path d="M13.3 1.169c-0.050-0.031-0.106-0.056-0.156-0.081-0.056 0.012-0.106 0.019-0.162 0.031l0.319 0.050z"></path>
             <path d="M1.15 13.156c-0.012 0.056-0.019 0.113-0.025 0.162 0.031 0.050 0.050 0.1 0.081 0.15l-0.056-0.313z"></path>
