add animation block

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>СТАС</title>
-    <link rel="stylesheet" href="css/app.min.css">
+    <link rel="stylesheet" href="css/app.min.css?ver=0.0.4">
 </head>
 <body>
 <header class="header" id="header">
@@ -106,7 +106,6 @@
         </div>
     </div>
 </header>
-
 <main class="main">
     <!-- Tabs -->
     <div class="tabs">
@@ -576,7 +575,6 @@
         </div>
     </div>
 </main>
-
 <footer class="footer" id="contact">
     <!-- Contact -->
     <div class="contact">
@@ -652,7 +650,122 @@
         </div>
     </div>
 </footer>
-
+<!-- Animations for your project -->
+<div class="anim" id="anim">
+    <div class="container">
+        <div class="flex-block aic anim__wrap">
+            <div class="anim__header">
+                <h2 class="anim__headerH2">Анимации</h2>
+                <h3 class="anim__headerH3">Возможные анимации для Вашего проекта.</h3>
+            </div>
+            <div class="anim__eye">
+                <div class="wrap_eye">
+                    <div class="wrap_border_dashed">
+                        <div id="eye">
+                            <div id="pupil">
+                                <div id="dot"></div>
+                            </div>
+                        </div>
+                        <div class="border_dashed"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Бегущая строка -->
+    <div class="wrap-ticker-protective">
+        <div class="run-row">
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+            <div class="ticker-protective">
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__text">! Внимание ! Attention ! Супер возможность !</div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+                <div class="ticker-protective__icon"></div>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- SVG DATA -->
 <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -696,7 +809,6 @@
         </symbol>
     </defs>
 </svg>
-<script src="js/lib/tiny-slider.js"></script>
-<script src="js/app.min.js"></script>
+<script src="js/app.min.js?ver=0.0.4"></script>
 </body>
 </html>
