--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
                         <input type="text" id="form__phone" class="form__input" placeholder="Телефон">
                         <span class="form__errors"></span>
                     </label>
-                    <button class="form__btn" type="button" disabled="disabled">Жду звонка</button>
+                    <button class="form__btn" type="submit" disabled="disabled">Жду звонка</button>
                 </form>
             </div>
         </div>
