--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
                 <nav class="menu">
                     <ul class="menu__container">
                         <li class="menu__item"><a href="#header" class="menu__link menu__link-active">Главная</a></li>
-                        <li class="menu__item"><a href="#whyThis" class="menu__link">О нас</a></li>
+                        <li class="menu__item"><a href="#main" class="menu__link">О нас</a></li>
                         <li class="menu__item"><a href="#price" class="menu__link">Цены</a></li>
                         <li class="menu__item"><a href="#say" class="menu__link">Отзывы</a></li>
                         <li class="menu__item"><a href="#contact" class="menu__link">Контакты</a></li>
@@ -108,7 +108,7 @@
         </div>
     </div>
 </header>
-<main class="main">
+<main class="main" id="main">
     <!-- Tabs -->
     <div class="tabs">
         <div class="container">
