form class textBTN

--- a/app/index.html
+++ b/app/index.html
@@ -608,7 +608,7 @@
                         </label>
                     </div>
                     <div class="wrap-form-btn">
-                        <button class="contact__btn" type="button" disabled="disabled">Отправить сообщение</button>
+                        <button class="contact__btn" type="submit" disabled="disabled">Жду звонка</button>
                     </div>
                 </form>
             </div>
