Tabs class animate

--- a/app/index.html
+++ b/app/index.html
@@ -116,13 +116,13 @@
                 <div class="wrap_navTab">
                     <ul class="tabs__nav">
                         <li class="tabs__item">
-                            <button class="tabs__btn active-tabs-btn" data-tab="0">TAB 1</button>
+                            <button class="tabs__btn active-tabs-btn" data-tab="0" type="button">TAB 1</button>
                         </li>
                         <li class="tabs__item">
-                            <button class="tabs__btn" data-tab="1">TAB 2</button>
+                            <button class="tabs__btn" data-tab="1" type="button">TAB 2</button>
                         </li>
                         <li class="tabs__item">
-                            <button class="tabs__btn" data-tab="2">TAB 3</button>
+                            <button class="tabs__btn" data-tab="2" type="button">TAB 3</button>
                         </li>
                     </ul>
                 </div>
