formating class menu

--- a/app/index.html
+++ b/app/index.html
@@ -42,18 +42,18 @@
                     <a href="#" class="header-content__btn" download>Скачать</a>
                 </div>
 
-                <form action="#" class="form" id="header__form">
+                <form action="#" class="form" id="header__form" title="Мы хотим Вам перезвонить">
                     <h2 class="form__header">Свяжитесь со мной, - <span class="orange-color">Срочно!</span></h2>
                     <label for="form__name" class="form__label">
-                        <input type="text" id="form__name" class="form__input" placeholder="Имя">
+                        <input type="text" id="form__name" class="form__input" placeholder="Имя" required>
                         <span class="form__errors"></span>
                     </label>
                     <label for="form__email" class="form__label">
-                        <input type="text" id="form__email" class="form__input" placeholder="Email">
+                        <input type="email" id="form__email" class="form__input" placeholder="Email" required>
                         <span class="form__errors"></span>
                     </label>
                     <label for="form__phone" class="form__label">
-                        <input type="text" id="form__phone" class="form__input" placeholder="Телефон">
+                        <input type="tel" id="form__phone" class="form__input" placeholder="Телефон" required>
                         <span class="form__errors"></span>
                     </label>
                     <button class="form__btn" type="submit" disabled="disabled">Отправить сообщение</button>
@@ -586,18 +586,18 @@
                     <h2 class="contact__headerH2">CONTACT US</h2>
                     <h3 class="contact__headerH3">Lorem ipsum dolor sit amet, consecrated advising elite.</h3>
                 </div>
-                <form action="#" class="contact__form">
+                <form action="#" class="contact__form" title="Мы рады с Вами пообщаться!)">
                     <div class="contact__form1Block">
                         <label for="contact__inp-name" class="contact__label">
-                            <input type="text" id="contact__inp-name" class="contact__inp form__input" placeholder="Имя">
+                            <input type="text" id="contact__inp-name" class="contact__inp form__input" placeholder="Имя" required>
                             <span class="form__errors"></span>
                         </label>
                         <label for="contact__inp-mail" class="contact__label">
-                            <input type="text" id="contact__inp-mail" class="contact__inp form__input" placeholder="Email">
+                            <input type="email" id="contact__inp-mail" class="contact__inp form__input" placeholder="Email" required>
                             <span class="form__errors"></span>
                         </label>
                         <label for="contact__inp-phone" class="contact__label">
-                            <input type="text" id="contact__inp-phone" class="contact__inp form__input" placeholder="Телефон">
+                            <input type="tel" id="contact__inp-phone" class="contact__inp form__input" placeholder="Телефон" required>
                             <span class="form__errors"></span>
                         </label>
                     </div>
